First steps. Added CSS file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
 
+
+<html>
+    <head>
+        <!-- Insert logo into title??? -->
+        <title>MH - Web Forms</title>
+        <meta charset="utf-8"/>
+        <!-- Is this name meta necessary??? -->
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+        <link rel="stylesheet" href="css/index.css"/>
+    </head>
+
+    <body>
+
+        <!-- Wrapper -->
+        <div id="wrapper" class="test">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ab totam obcaecati reiciendis aperiam nihil! Minus porro atque, quos fugit, odio quam laboriosam ab blanditiis cumque excepturi delectus iusto officiis!</p>
+        </div>
+
+
+
+
+
+
+
+    </body>
+
+
+
+
+</html>
