--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
         <!-- Wrapper -->
         <div id="wrapper" class="test">
+
+            <!-- Header -->
+            <header id="header">
+                <a href="index.html"></a>
+            </header>
+            <h1>Test</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ab totam obcaecati reiciendis aperiam nihil! Minus porro atque, quos fugit, odio quam laboriosam ab blanditiis cumque excepturi delectus iusto officiis!</p>
+
         </div>
 
 
