--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<html>
+<html lang="en">
     <head>
         <!-- Insert logo into title??? -->
         <title>MH - Web Forms</title>
@@ -19,7 +19,24 @@
             <!-- Header -->
             <header id="header">
                 <a href="index.html"></a>
+                <h1>This is the header</h1>
             </header>
+
+            <!-- Nav -->
+            <nav id="nav">
+                <h2>This is the navigation</h2>
+            </nav>
+
+            <!-- Main -->
+            <div id="main">
+
+                <!-- Main Content -->
+                <article class="mainContent">
+                    <h3>This is main article</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, aliquam fugiat dolorem obcaecati quidem non? Cum voluptas tempora quis, quam eius, non in quae repellat voluptates odit rerum impedit libero!</p>
+                </article>
+                
+            </div>
             <h1>Test</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat ab totam obcaecati reiciendis aperiam nihil! Minus porro atque, quos fugit, odio quam laboriosam ab blanditiis cumque excepturi delectus iusto officiis!</p>
 
